[tool.poetry]
name = "workdir"
version = "0.1.0"
description = "実験環境"
authors = ["tonnetonne814"]
license = "MIT Lisence"
readme = "README.md"

packages = [
    { include = "source" }
]

[tool.poetry.dependencies]
python = "^3.11"
pyopenjtalk-prebuilt = "0.3.0"
torch = {url = "https://download.pytorch.org/whl/cu121/torch-2.2.0%2Bcu121-cp311-cp311-linux_x86_64.whl#sha256=0bc59ae71528f0a6013f1b01670f039cc6d01b2ced7a7219ca16ee194c305116"}
torchaudio = {url = "https://download.pytorch.org/whl/cu121/torchaudio-2.2.0%2Bcu121-cp311-cp311-linux_x86_64.whl#sha256=777158d60e6604f8985aa7df631fa6d4bf2fbe6be45827377f8a50b2e42a6425"}
torchvision = {url = "https://download.pytorch.org/whl/cu121/torchvision-0.17.0%2Bcu121-cp311-cp311-linux_x86_64.whl#sha256=fd66c9554fc1448633c232eeddcbd90a9bcd135ae94e682f4cb721984974ca9b"}
ffmpeg-python = "^0.2.0"
tdmelodic = "^1.0.0"
fugashi = "^1.3.0"
pytorch-lightning = "2.1.4"
sudachipy = "^0.6.8"
librosa = "0.9.1"
soundcard = "^0.4.2"
music21 = "^9.1.0"
mido = "^1.3.2"
ffmpeg-normalize = "^1.27.7"
torchcrepe = "^0.0.22"
utaupy = "^1.18.3"
g2p-en = "^2.1.0"
polars = "^0.20.6"
numpy = "1.23.5"
protobuf = "==3.20.*"
einops = "^0.7.0"
tensorboard = "^2.15.1"
setuptools = "^69.0.3"
cython = "^3.0.8"
transformers = "^4.37.2"
openai = "^1.10.0"
pydub = "^0.25.1"
hydra-core = "^1.3.2"
lightning = "2.1.4"
rootutils = "^1.0.7"
rich = "^13.7.0"
hydra-colorlog = "^1.2.0"
hydra-optuna-sweeper = "^1.2.0"
pyworld = "^0.3.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
